styling: fix responsiveness on mobile; no horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,10 +25,13 @@
 
 html {
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 body {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 @layer utilities {
